[gd_scene load_steps=4 format=3 uid="uid://cfkkq4g3vqfaw"]

[ext_resource type="Script" path="res://addons/inputty/Rebind/InputRemap.gd" id="1_7dgvl"]
[ext_resource type="PackedScene" uid="uid://lhcbst2384wb" path="res://addons/inputty/Rebind/UIElements/action_rebind_ui_prefab.tscn" id="2_gv0gu"]
[ext_resource type="PackedScene" uid="uid://4gxuwqklckkw" path="res://addons/inputty/Rebind/UIElements/property_ui_prefab.tscn" id="3_55wve"]

[node name="InputRemap" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7dgvl")
actionRebindPrefab = ExtResource("2_gv0gu")
propertySetupPrefab = ExtResource("3_55wve")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
alignment = 1

[node name="Cancel" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(198, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
clip_text = true

[node name="Defaults" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(198, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Load Defaults"
clip_text = true

[node name="Apply" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(198, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"
clip_text = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnsavedChangesPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UnsavedChangesPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="IgnoreChanges" type="Button" parent="UnsavedChangesPanel/HBoxContainer"]
custom_minimum_size = Vector2(198, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Don't Apply Changes"
clip_text = true

[node name="ApplyChanges" type="Button" parent="UnsavedChangesPanel/HBoxContainer"]
custom_minimum_size = Vector2(198, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Apply Changes"
clip_text = true

[node name="Label" type="Label" parent="UnsavedChangesPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.5
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 2
text = "You have unsaved changes."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="HBoxContainer/Defaults" to="." method="loadDefaults"]
[connection signal="pressed" from="HBoxContainer/Apply" to="." method="applyMap"]
[connection signal="pressed" from="UnsavedChangesPanel/HBoxContainer/IgnoreChanges" to="." method="_on_ignore_changes_pressed"]
[connection signal="pressed" from="UnsavedChangesPanel/HBoxContainer/ApplyChanges" to="." method="_on_apply_changes_pressed"]
